--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -48,5 +48,5 @@
     "Logout": "लॉग आउट",
     "Profile": "प्रोफ़ाइल",
     "Transactions": "लेन-देन",
-    "Old users could use m/44'/60'/0'/0/0": "Old users could use m/44'/60'/0'/0/0"
+    "Old users could use m/44'/60'/0'/0/0": "पुराने उपयोगकर्ता m/44'/60'/0'/0/0 का उपयोग कर सकते थे"
 }
