--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -48,5 +48,6 @@
     "Logout": "Logout",
     "Profile": "Profile",
     "Transactions": "Transactions",
-    "Old users could use m/44'/60'/0'/0/0": "Old users could use m/44'/60'/0'/0/0"
+    "Old users could use m/44'/60'/0'/0/0": "Old users could use m/44'/60'/0'/0/0",
+	"Import": "Import"
 }
