--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -6,7 +6,7 @@
     "Wrong password. Please try again.": "Password errata. Inserisci nuovamente.",
     "Are you sure you want to erase your wallet?": "Sei sicuro di voler resettare il tuo wallet?",
     "Use a different wallet": "Usa un wallet differente",
-    "Import an account with a seed phrase": "Import un account con una frase segreta",
+    "Import an account with a seed phrase": "Importa un account con una frase segreta",
     "Enter your secret phrase to restore the wallet.": "Inserisci la tua frase segreta per ripristinare il wallet.",
     "Please, insert valid bip39 seed phrase": "Inserisci una frase segreta conforme al protocollo bip39",
     "Password local browser encryption": "Password locale per browser encryption",
@@ -14,7 +14,7 @@
     "Confirm you secret seed": "Conferma la tua frase segreta",
     "Please re-enter your seed words and passphrase in full from the previous step. This is to confirm that you have correctly recorded these down.": "Inserisci nuovamente la tua frase segreta e la tua password. Questo serve ad essere certi che siano stati memorizzati correttamente.",
     "Or": "O",
-    "Import mnemonic": "Import frase segreta",
+    "Import mnemonic": "Importa frase segreta",
     "Create wallet": "Crea wallet",
     "Next": "Avanti",
     "Destination address *": "Indirizzo destinatione *",
@@ -48,5 +48,6 @@
     "Logout": "Esci",
     "Profile": "Profilo",
     "Transactions": "Transazioni",
-    "Old users could use m/44'/60'/0'/0/0": "I vecchi utenti potrebbero usare m/44'/60'/0'/0/0"
+    "Old users could use m/44'/60'/0'/0/0": "I vecchi utenti potrebbero usare m/44'/60'/0'/0/0",
+	"Import": "Importa"
 }
