seed phrase string

--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -49,5 +49,6 @@
     "Profile": "प्रोफ़ाइल",
     "Transactions": "लेन-देन",
     "Old users could use m/44'/60'/0'/0/0": "पुराने उपयोगकर्ता m/44'/60'/0'/0/0 का उपयोग कर सकते थे",
-	"Import": "आयात"
+	"Import": "आयात",
+	"Seed phrase": "बीज वाक्यांश"
 }
