--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -49,5 +49,6 @@
     "Profile": "Profile",
     "Transactions": "Transactions",
     "Old users could use m/44'/60'/0'/0/0": "Old users could use m/44'/60'/0'/0/0",
-	"Import": "Import"
+	"Import": "Import",
+	"Seed phrase": "Seed phrase"
 }
