--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -49,5 +49,6 @@
     "Profile": "Profilo",
     "Transactions": "Transazioni",
     "Old users could use m/44'/60'/0'/0/0": "I vecchi utenti potrebbero usare m/44'/60'/0'/0/0",
-	"Import": "Importa"
+	"Import": "Importa",
+	"Seed phrase": "Frase segreta"
 }
