--- a/public/locales/sr/translation.json
+++ b/public/locales/sr/translation.json
@@ -51,5 +51,7 @@
 	"Old users could use m/44'/60'/0'/0/0": "Stari korisnici mogu da koriste m/44'/60'/0'/0/0",
 	"Import": "Uvezi",
 	"Seed phrase": "Seed fraza",
-	"Address copied": "Adresa kopirana"
+	"Address copied": "Adresa kopirana",
+	"Connect Ledger": "Povežite knjigu",
+	"ledger_connect_confirmation": "Provjerite je li knjiga ideala trenutno otvorena i dopustite džepu idene da čita vašu idejnu knjigu."
 }
