--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -28,7 +28,7 @@
 	"Secret seed phrase": "Secret seed phrase",
 	"Your secret backup phrase makes it easy to backup and restore your account.": "Your secret backup phrase makes it easy to backup and restore your account.",
 	"ATTENTION:": "ATTENTION:",
-	"Never tell anyone this backup phrase. Anyone with this phrase can steal your DNA forever.": "Never tell anyone this backup phrase. Anyone with this phrase can steal your DNA forever.",
+	"Never tell anyone this backup phrase. Anyone with this phrase can steal your iDNA forever.": "Never tell anyone this backup phrase. Anyone with this phrase can steal your iDNA forever.",
 	"Please write your seed words below and store them in a secure place. These can be used to restore your wallet.": "Please write your seed words below and store them in a secure place. These can be used to restore your wallet.",
 	"Click here to show seed phrase": "Click here to show seed phrase",
 	"Your Full Address": "Your Full Address",
