--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -28,7 +28,7 @@
 	"Secret seed phrase": "गुप्त बीज वाक्यांश",
 	"Your secret backup phrase makes it easy to backup and restore your account.": "आपका गुप्त वाक्यांश बैकअप, आपके खाते को पुनर्स्थापित करना आसान बनाता है।",
 	"ATTENTION:": "ध्यान:",
-	"Never tell anyone this backup phrase. Anyone with this phrase can steal your DNA forever.": "इस बैकअप वाक्यांश को कभी किसी को न बताएं। इस वाक्यांश के साथ कोई भी आपके डीएनए को हमेशा के लिए चुरा सकता है।",
+	"Never tell anyone this backup phrase. Anyone with this phrase can steal your iDNA forever.": "इस बैकअप वाक्यांश को कभी किसी को न बताएं। इस वाक्यांश के साथ कोई भी आपके डीएनए को हमेशा के लिए चुरा सकता है।",
 	"Please write your seed words below and store them in a secure place. These can be used to restore your wallet.": "कृपया नीचे अपने बीज शब्द लिखें और उन्हें सुरक्षित स्थान पर संग्रहीत करें। ये आपके वॉलेट को पुनर्स्थापित करने के लिए उपयोग किया जा सकता है।",
 	"Click here to show seed phrase": "बीज वाक्यांश दिखाने के लिए यहां क्लिक करें",
 	"Your Full Address": "आपका पूरा पता",
