--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -28,7 +28,7 @@
 	"Secret seed phrase": "Frase segreta",
 	"Your secret backup phrase makes it easy to backup and restore your account.": "La tua frase segreta ti permette di ripristinare facilmente il tuo account.",
 	"ATTENTION:": "ATTENZIONE:",
-	"Never tell anyone this backup phrase. Anyone with this phrase can steal your iDNA forever.": "Non comunicare mai a nessuno la tua frase segreta. Chiunque la possegga può rubare i tuoi iDNA per sempre.",
+	"Never tell anyone this backup phrase. Anyone with this phrase can steal your IDNA forever.": "Non comunicare mai a nessuno la tua frase segreta. Chiunque la possegga può rubare i tuoi IDNA per sempre.",
 	"Please write your seed words below and store them in a secure place. These can be used to restore your wallet.": "Memorizza in un posto sicuro la frase segreta qui sotto. Questa può essere utilizzata per ripristinare il tuo wallet.",
 	"Click here to show seed phrase": "Clicca qui per mostrare la tua frase segreta",
 	"Your Full Address": "Il Tuo Indirizzo",
